--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "socket-chat-example",
+  "name": "meshww-socket",
   "version": "0.0.1",
-  "description": "my first socket.io app",
+  "description": "Mesh World Wide Vanilla Javascript Socket.io Interface",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "socket.io": "^3.0.3"
   },
-  "scripts": {
-    "start": "node index.js"
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
