--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meshww-socket",
   "version": "0.0.1",
   "description": "Mesh World Wide Vanilla Javascript Socket.io Interface",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
